<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentScannerGalleryActivity">

    <!-- Header with a back button and a done button -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back Button -->
        <!--    <ImageView-->
        <!--        android:id="@+id/backButton"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:src="@drawable/ic_back"-->
        <!--        android:contentDescription="@string/back" />-->

        <!-- Title Text -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/review"
            android:textSize="18sp" />

        <!-- Done Button -->
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:background="@drawable/button_rounded"
            android:text="@string/done"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Main Content: Image Preview -->
    <!--<ImageView-->
    <!--    android:id="@+id/cropped_image_view"-->
    <!--    android:layout_width="0dp"-->
    <!--    android:layout_height="0dp"-->
    <!--    android:background="@android:color/white"-->
    <!--    app:layout_constraintTop_toBottomOf="@id/headerLayout"-->
    <!--    app:layout_constraintBottom_toTopOf="@id/galleryRecyclerView"-->
    <!--    app:layout_constraintStart_toStartOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    android:contentDescription="@string/scanned_image"/>-->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/centerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <!-- Center Gallery: RecyclerView for selectable images -->
    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager">

        <TextView
            android:id="@+id/pageNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="2/2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/galleryRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="0dp"
            android:clipToPadding="false"
            android:padding="8dp"
            tools:ignore="UnknownId"
            tools:listitem="@layout/item_gallery_image" />
    </LinearLayout>


    <!-- Footer with icons -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Crop and Rotate Button -->
        <LinearLayout
            android:id="@+id/cropRotateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/crop_rotate"
                android:gravity="center"
                android:src="@drawable/crop_rotate_24px"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cut" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginStart="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/crop_rotate"
                android:gravity="center"
                android:src="@drawable/delete_24px"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delete" />
        </LinearLayout>
        <!-- Delete Button -->
<!--        <ImageView-->
<!--            android:id="@+id/deleteButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:contentDescription="@string/delete"-->
<!--            android:padding="20dp"-->
<!--            android:src="@drawable/delete_24px" /> &lt;!&ndash; Add margin to the start &ndash;&gt;-->

<!--        <ImageView-->
<!--            android:id="@+id/addButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:contentDescription="@string/add"-->
<!--            android:padding="20dp"-->
<!--            android:src="@drawable/add_24px" /> &lt;!&ndash; Add margin to the start &ndash;&gt;-->
        <LinearLayout
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginStart="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/crop_rotate"
                android:gravity="center"
                android:src="@drawable/add_24px"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
